--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@ input,
 button {
     padding: 0.5rem;
     margin: 0.5rem;
+    border-radius: 5px;
+    border: none;
+    font-size: 16px;
 }
 
 .player-button {
@@ -198,7 +201,7 @@ h3,
 h4,
 p,
 sub {
-    color: white;
+    color: black;
 }
 
 /* Progress Bar Styles */
@@ -250,6 +253,7 @@ input[type="number"] {
     border: none;
     font-size: 16px;
 }
+
 
 @media (max-width: 768px) {
     .podium-ind {
